<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/Setting"
        app:showAsAction="never"
        android:visible="true" />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/log_in"
        app:showAsAction="never"
        android:visible="true" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/logout"
        app:showAsAction="never"
        android:visible="true" />
</menu>