<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="0dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Type3"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@+id/Location"
                android:layout_marginStart="14dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/divider5"
                android:font="@font/sans"
                android:text="Web Workorder"
                android:textColor="#555171"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="1dp"
                android:layout_height="13dp"
                android:layout_below="@+id/Location"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/Type2"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/Type2"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@+id/Location"
                android:layout_marginStart="14dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/divider4"
                android:font="@font/sans"
                android:text="High"
                android:textColor="#555171"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="13dp"
                android:layout_below="@+id/Location"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/Type1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/Type1"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@+id/Location"
                android:layout_alignParentStart="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="8dp"
                android:font="@font/sans"
                android:text="Electrical"
                android:textColor="#555171"
                android:textSize="12sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/icon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="29dp"
                android:background="@drawable/shapes"
                android:clickable="true"
                android:src="@drawable/ic_baseline_message_24"
                app:backgroundTint="@android:color/holo_orange_light"
                app:fabCustomSize="32dp"
                app:maxImageSize="18dp" />

            <TextView
                android:id="@+id/FaultID"
                android:layout_width="wrap_content"
                android:layout_height="13dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="19dp"
                android:layout_toEndOf="@+id/icon_type"
                android:text="#ID314645"
                android:textColor="#C7C7C1"
                android:textSize="10sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="9dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@+id/FaultID"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/TaskStat"
                android:layout_width="47dp"
                android:layout_height="13dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="231dp"
                android:layout_toEndOf="@+id/divider3"
                android:text="ASSIGNED"
                android:textColor="#C7C7C1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/Task"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FaultID"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="100dp"
                android:layout_toEndOf="@+id/icon_type"
                android:font="@font/sans"
                android:text="Flickering of light in ground floor lobby - Block B"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Task"
                android:layout_alignParentStart="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/location"
                android:maxWidth="2dp"
                android:maxHeight="2dp"
                app:srcCompat="@drawable/ic_baseline_business_center_24" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@+id/Task"
                android:layout_marginStart="9dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/imageView"
                android:font="@font/sans"
                android:text="@string/acropolis_blockb"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@+id/Task"
                android:layout_marginStart="113dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/Location"
                android:font="@font/sans"
                android:text="@string/_2_days_ago"
                android:textColor="#8d8d90"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Task"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/Time"
                app:srcCompat="@drawable/status" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintWidth_percent=".86" />


</androidx.constraintlayout.widget.ConstraintLayout>